.happypack/s--1266209822
/Users/dongfanai/Desktop/project/kr-admin/src/Containers/Permission/User/Createdialog/index.js: Unexpected token, expected ( (79:8)
SyntaxError: /Users/dongfanai/Desktop/project/kr-admin/src/Containers/Permission/User/Createdialog/index.js: Unexpected token, expected ( (79:8)
[0m [90m 77 | [39m
 [90m 78 | [39m[90m		}*/[39m
[31m[1m>[22m[39m[90m 79 | [39m	console[33m.[39mlog([32m'id----'[39m[33m,[39m val)
 [90m    | [39m	       [31m[1m^[22m[39m
 [90m 80 | [39m}
 [90m 81 | [39mrenderChildren [33m=[39m (child) [33m=>[39m {
 [90m 82 | [39m	[36mvar[39m _this [33m=[39m [36mthis[39m[33m;[39m[0m
    at Parser.pp$5.raise (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:4246:13)
    at Parser.pp.unexpected (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1627:8)
    at Parser.pp.expect (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1615:33)
    at Parser.pp$3.parseMethod (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:3964:8)
    at Parser.parseClassMethod (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5474:12)
    at Parser.pp$1.parseClassBody (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:2391:10)
    at Parser.pp$1.parseClass (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:2270:8)
    at Parser.pp$1.parseStatement (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1711:19)
    at Parser.parseStatement (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:5218:22)
    at Parser.pp$1.parseBlockBody (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:2133:21)
    at Parser.pp$1.parseTopLevel (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1645:8)
    at Parser.parse (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:1537:17)
    at Object.parse$1 [as parse] (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.14.1@babylon/lib/index.js:6466:37)
    at File.parse (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/file/index.js:479:24)
    at File.parseCode (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/file/index.js:568:20)
    at /Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/pipeline.js:48:12
    at File.wrap (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/file/index.js:528:16)
    at Pipeline.transform (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.7.7@babel-core/lib/transformation/pipeline.js:46:17)
    at transpile (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.2.4@babel-loader/index.js:14:22)
    at /Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.2.4@babel-loader/lib/fs-cache.js:145:18
    at ReadFileContext.callback (/Users/dongfanai/Desktop/project/kr-admin/node_modules/.6.2.4@babel-loader/lib/fs-cache.js:28:23)
    at FSReqWrap.readFileAfterOpen [as oncomplete] (fs.js:365:13)